--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "homepage": "https://github.com/ktes2/1102-wp2-mern-209410116#readme",
   "devDependencies": {
     "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "mongoose": "^6.2.11"
   }
 }
